--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,7 +8,7 @@
     <title>CompliCal - Compliance Deadlines API</title>
     
     <!-- Preconnect to API -->
-    <link rel="preconnect" href="https://vmvjp2v1fl.execute-api.ap-south-1.amazonaws.com">
+    <link rel="preconnect" href="https://5jhvtpw59k.execute-api.us-east-1.amazonaws.com">
     
     <!-- PWA -->
     <link rel="manifest" href="/manifest.json">
